--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 cryptography==42.0.8
+elastic-transport==8.13.1
+elasticsearch==8.14.0
 Flask==3.0.3
 flask-redis==0.4.0
 google-auth==2.32.0
@@ -16,6 +18,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jwt==1.3.1
 MarkupSafe==2.1.5
+pika==1.3.2
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
